--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,3 @@
 name = "qalbu-quran"
 compatibility_date = "2024-01-01"
-main = "./dist/_worker.js"
-
-# Hapus atau komentari bagian [site] karena tidak diperlukan untuk SSR
-# [site]
-# bucket = "./dist"
+# Hapus semua baris lain, Pages tidak butuh main atau [site]
