--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "deploy": "astro build && wrangler pages deploy dist"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^8.0.0",
